Fix overlap and make left column full height

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,26 +1,28 @@
 .total {
   display: grid;
-  grid-template-columns: 355px minmax(0, 1fr);
+  grid-template-columns: 375px minmax(0, 1fr);
   column-gap: 0;
   align-items: stretch;
   max-width: 1300px;
   margin: 0 auto;
+  padding: 20px 20px 0 20px;
   position: relative;
 }
 
 #left-column {
-  width: 355px;
-  margin: 25px 0 0 25px;
+  width: 100%;
   background: #fff;
   text-align: left;
+  align-self: stretch;
+  min-height: 100%;
 }
 
 #global-head {
   width: 100%;
-  padding-top: 35px;
-  padding-left: 55px;
+  padding-top: 40px;
+  padding-left: 50px;
   padding-right: 30px;
-  padding-bottom: 25px;
+  padding-bottom: 30px;
   color: rgb(50, 50, 50);
   background: transparent;
   margin: 0;
@@ -29,7 +31,7 @@
 #global-head p {
   font-size: 12px;
   color: rgb(85, 85, 85);
-  line-height: 18px;
+  line-height: 1.6;
   margin-bottom: 0;
 }
 
@@ -38,24 +40,24 @@
   background: transparent;
   text-align: left;
   font-size: 15px;
-  padding-top: 0;
-  padding-left: 55px;
+  padding-top: 25px;
+  padding-left: 50px;
   padding-right: 30px;
-  padding-bottom: 25px;
+  padding-bottom: 40px;
   margin: 0;
 }
 
 #main {
-  padding-top: 25px;
-  padding-right: 25px;
-  padding-bottom: 10px;
-  padding-left: 0;
+  width: 100%;
   min-width: 0;
+  padding: 0;
+  margin: 0;
 }
 
 #main-in {
-  padding-left: 0;
-  margin-left: 0;
+  padding: 0;
+  margin: 0;
+  min-width: 0;
 }
 
 #main p {
@@ -65,8 +67,9 @@
 
 #main section {
   background-color: rgb(245, 245, 245);
-  padding: 25px 100px 25px 100px;
+  padding: 30px 85px 25px 85px;
   margin: 0;
+  min-width: 0;
 }
 
 #main .welcome {
@@ -76,77 +79,67 @@
 #overlay {
   display: none;
   position: fixed;
-  background: rgba(0, 0, 0, .6);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  inset: 0;
 }
 
-/* slightly narrower desktop */
+/* medium desktop */
 @media screen and (max-width: 1150px) {
   .total {
-    grid-template-columns: 330px minmax(0, 1fr);
-  }
-
-  #left-column {
-    width: 330px;
-    margin: 10px 0 0 10px;
-    top: 10px;
+    grid-template-columns: 340px minmax(0, 1fr);
+    padding: 12px 12px 0 12px;
   }
 
   #global-head {
-    padding-top: 30px;
-    padding-left: 45px;
-    padding-right: 25px;
+    padding-top: 32px;
+    padding-left: 40px;
+    padding-right: 24px;
+    padding-bottom: 24px;
   }
 
   #sidebar {
-    padding-left: 45px;
-    padding-right: 25px;
+    padding-top: 20px;
+    padding-left: 40px;
+    padding-right: 24px;
+    padding-bottom: 32px;
   }
 
-  #main {
-    padding-top: 10px;
-    padding-right: 10px;
+  #main section {
+    padding: 28px 45px 24px 45px;
   }
 }
 
 @media screen and (max-width: 1050px) {
   .total {
-    grid-template-columns: 310px minmax(0, 1fr);
-  }
-
-  #left-column {
-    width: 310px;
-    margin: 0;
-    top: 0;
+    grid-template-columns: 300px minmax(0, 1fr);
+    padding: 0;
   }
 
   #global-head {
-    padding-top: 20px;
-    padding-left: 35px;
+    padding-top: 24px;
+    padding-left: 32px;
     padding-right: 20px;
+    padding-bottom: 22px;
   }
 
   #sidebar {
-    padding-left: 35px;
+    padding-top: 18px;
+    padding-left: 32px;
     padding-right: 20px;
+    padding-bottom: 28px;
   }
 
-  #main {
-    padding-top: 0;
-    padding-right: 0;
+  #main section {
+    padding: 25px 32px 25px 32px;
   }
 }
 
-/* mobile: slide-in left column */
+/* mobile */
 @media screen and (max-width: 900px) {
   .total {
     display: block;
     max-width: 1300px;
+    padding: 0;
   }
 
   #left-column {
@@ -155,7 +148,7 @@
     right: -300px;
     width: 270px;
     height: 100%;
-    margin: 0;
+    min-height: 100vh;
     background: #fff;
     transition: .35s ease-in-out;
     z-index: 300;
@@ -163,38 +156,21 @@
   }
 
   #global-head {
-    width: 100%;
     padding-top: 25px;
-    padding-left: 40px;
-    padding-right: 20px;
+    padding-left: 32px;
+    padding-right: 18px;
     padding-bottom: 20px;
-    background: transparent;
-  }
-
-  #global-head p {
-    color: rgb(85, 85, 85);
-    font-size: 12px;
-    line-height: 18px;
   }
 
   #sidebar {
-    width: 100%;
-    padding-top: 0;
-    padding-left: 40px;
-    padding-right: 20px;
+    padding-top: 10px;
+    padding-left: 32px;
+    padding-right: 18px;
     padding-bottom: 25px;
-    background: transparent;
   }
 
   #main {
-    padding-top: 25px;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 10px;
-  }
-
-  #main-in {
-    padding-left: 0;
+    width: 100%;
   }
 
   #main section {
@@ -212,21 +188,21 @@
 
 @media screen and (max-width: 400px) {
   #left-column {
-    right: -200px;
-    width: 200px;
+    right: -220px;
+    width: 220px;
   }
 
   .open #left-column {
-    transform: translate3d(-200px, 0, 0);
+    transform: translate3d(-220px, 0, 0);
   }
 
   #global-head {
-    padding-left: 25px;
-    padding-right: 15px;
+    padding-left: 24px;
+    padding-right: 14px;
   }
 
   #sidebar {
-    padding-left: 25px;
-    padding-right: 15px;
+    padding-left: 24px;
+    padding-right: 14px;
   }
 }
